Fix bug where loading old session file with missing element would cause NPE